<resources>
    <string name="app_name" translatable="false">ToDoList</string>
    <string name="TodoList">To Do List</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Sign In</string>
    <string name="create_a_new_user">Create a new User</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">https://www.huawei.com/en/</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Personality">Personality</string>
    <string name="favorites">Favorites</string>
    <string name="important">Important</string>
    <string name="all_notes">All Notes</string>
    <string name="Normal">Normal</string>
    <string name="less_important">Less Important</string>
    <string name="Target">Target</string>
    <string name="completed">Completed Notes</string>
    <string name="huawei" translatable="false">Huawei</string>
    <string name="logout">Log Out</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="delete">delete</string>

    <string-array name="status">
        <item>All Notes</item>
        <item>Personality</item>
        <item>Important</item>
        <item>Normal</item>
        <item>Target</item>
        <item>Less Important</item>

    </string-array>

</resources>
